<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_layout"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:boxBackgroundColor="@color/paris"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeWidth="0dp"
        app:endIconDrawable="@drawable/ic_close_gray"
        app:endIconMode="clear_text"
        app:hintEnabled="false"
        app:startIconDrawable="@drawable/ic_back_gray">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/montserrat_medium"
            android:hint="@string/progress_edit_text_hint"
            android:includeFontPadding="false"
            android:padding="0dp"
            android:textColor="@color/moscow"
            android:textColorHint="@color/minsk"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:boxBackgroundColor="@color/zurich"
        app:boxStrokeColor="@color/vilnius"
        app:boxStrokeWidth="1dp"
        app:boxStrokeWidthFocused="1dp"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:includeFontPadding="false"
            android:singleLine="true"
            android:textColor="@color/moscow"
            android:textColorHint="@color/minsk"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/view_float"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <LinearLayout
            android:id="@+id/view_progress"
            android:layout_width="207dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical"
            tools:ignore="RtlSymmetry">

            <TextView
                android:id="@+id/tv_indicator"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat_semi_bold"
                android:includeFontPadding="false"
                android:text="@string/progress_indicator_text"
                android:textColor="@color/moscow"
                android:textSize="15sp" />

            <ProgressBar
                android:id="@+id/progress_indicator"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:max="3"
                android:progress="1"
                android:progressDrawable="@drawable/shape_progress_bar_custom" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_purse"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_weight="1"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:padding="0dp"
            android:text="@string/progress_button_text"
            android:textAllCaps="false"
            android:textSize="12sp" />
    </LinearLayout>
</FrameLayout>